fix: fix burger menu on small dimensions

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -777,7 +777,7 @@ body._lock {
       background-color: #292929;
       z-index: 20;
       padding: 256px 38px 0;
-      transform: translate(-100%, -100%);
+      transform: translate(-3000%, -3000%);
     }
 
 
@@ -810,10 +810,12 @@ body._lock {
     }
 
     .header__burger._active {
+      display: block;
       transform: rotate(90deg);
     }
 
     .header__nav._active {
+      /* display: block; */
       transform: translate(0px, 0px);
     }
 
