--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -464,7 +464,7 @@ justify-content: space-between;
     background-color: #F6F6F6;
     z-index: 20;
     padding: 256px 38px 0;
-    transform: translate(-100%, -100%);
+    transform: translate(-3000%, -3000%);
   }
 
 
